# libraries-builder

./: CMakeLists.txt  grpc.cmake  msvc-toolset-version.txt.in  openssl-1_1.cmake  protobuf.cmake  sqlcipher.cmake  zlib.cmake
builder/: build-all.bat  win-build-one.bat
cmake/: FindOpenSSL.cmake  FindProtobuf.cmake  FindZLIB.cmake  FindgRPC.cmake
project-openssl-1_1/: CMakeLists.txt
project-zlib/: CMakeLists.txt
